--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a{
 
 .search{
     width: 100%;
-    height: 700px;
+    height: 500px;
     background-color: var(--bgColor);
     position: relative;
 }
@@ -98,7 +98,7 @@ a{
 .search__box{
     position: absolute;
     top: 30%;
-    left: 20%;
+    left: 40%;
     transform: translate(-50%, -50%);
 }
 
@@ -118,11 +118,35 @@ a{
     align-items: center;
     border: none;
     outline: none;
-    width: 300px;
+    width: 400px;
+    background-color: white;
 }
 
 .search__input input{
     flex: 1;
+    border: none;
+    outline: none;
+    height: 40px;
+}
+
+.search__input i{
+    margin-right: 10px;
+    color: var(--bgColor);
+}
+
+.search__btn{
+    background-color: var(--mainColor);
+    width: 50px;
+    position: relative;
+    cursor: pointer;
+}
+
+.search__btn i{
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
