--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ a{
 
 .search__box{
     position: absolute;
-    top: 30%;
+    top: 40%;
     left: 40%;
     transform: translate(-50%, -50%);
 }
@@ -147,6 +147,31 @@ a{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.search__paragrap{
+    color: white;
+    font-weight: 200;
+    margin-top: 20px;
+    font-size: 13px;
+}
+
+.search__paragrap span{
+    border: 1px solid white;
+    padding: 5px 8px;
+}
+
+
+.search__sub_title{
+    color: white;
+    font-weight: 200;
+    margin-top: 40px;
+    font-size: 20px;
+}
+
+.search__sub_title span{
+    font-weight: 400;
+    font-size: 25px;
 }
 
 
