--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 .container{
     width: 80%;
     margin: auto;
+    height: 500px;
 }
 
 .nav{
@@ -33,6 +34,7 @@
 .nav__logo h2{
     font-weight: 600;
     font-size: 30px;
+    color: #363636;
 }
 
 .nav__menu, .nav__login{
@@ -42,7 +44,7 @@
 
 a{
     text-decoration: none;
-    color: black;
+    color: #363636;
 }
 
 .nav__menu li{
@@ -127,6 +129,7 @@ a{
     border: none;
     outline: none;
     height: 40px;
+    padding-left: 8px;
 }
 
 .search__input i{
@@ -159,6 +162,7 @@ a{
 .search__paragrap span{
     border: 1px solid white;
     padding: 5px 8px;
+    cursor: pointer;
 }
 
 
@@ -173,5 +177,341 @@ a{
     font-weight: 400;
     font-size: 25px;
 }
+
+.categories{
+    margin-top: 30px;
+}
+
+.categories__title{
+    font-size: 25px;
+    color: #363636;
+}
+
+.categories__line{
+    display: flex;
+    max-width: 100%;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
+
+.categories__box{
+    border: 1px;
+    border-style: solid;
+    border-color: var(--bgColor);
+    width: 250px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.categories__box h5{
+    /* position: absolute; */
+    color: var(--bgColor);
+    font-size: 12px;
+    ;
+}
+
+.categories__box i{
+    color: var(--mainColor);
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.categories__box:hover{
+    border: 0.5px;
+    border-style: solid;
+    border-color: var(--mainColor);
+    background-color: #37bf0052;
+    transition: all, 1s;
+}
+
+.categories__btn{
+    margin-top: 20px;
+    padding: 10px 40px;
+    background-color: var(--mainColor);
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-left: 33%;
+}
+
+.jobs{
+    width: 100%;
+    height: 660px;
+}
+
+.recent-jobs h4{
+    color: #363636;
+    margin-bottom: 20px;
+}
+
+.jobs__table{
+    display: flex;
+    /* justify-content: space-around; */
+    align-items: center;
+    width: 550px;
+    height: 100px;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-color: var(--bgColor);
+}
+
+.jobs__table__img{
+    width: 40px;
+    height: 40px;
+    background-color: var(--bgColor);
+    margin-left: 15px;
+}
+
+.jobs__table__title{
+    margin-left: 20px;
+}
+
+.jobs__table__title span{
+    padding: 4px;
+    background-color: rgb(0, 110, 255);
+    color: white;
+    font-size: 8px;
+    margin-bottom: 5px;
+}
+
+.jobs__table__title h5{
+    color: #363636;
+}
+
+.jobs__table__location{
+    display: flex;
+}
+
+.jobs__table__location p{
+    color: var(--bgColor);
+    font-weight: 100;
+    font-size: 12px;
+    margin-right: 12px;
+}
+
+.jobs__table__location p i{
+    margin-right: 4px;
+}
+
+.jobs__table:hover{
+    background-color: #36bf0023;
+    border-style: var(--mainColor);
+}
+
+.job__table__btn{
+    margin-top: 25px;
+}
+
+.job__table__btn button{
+    display: block;
+    margin: auto;
+    border: none;
+    padding: 8px 50px;
+    background-color: var(--mainColor);
+    color: white;
+    cursor: pointer;
+
+}
+
+.jobs .container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.job-spotlight{
+    flex: 1;
+}
+
+.job__icon{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 15px;
+    color: #363636;
+}
+
+.job__icon__box{
+    margin-right: 35px;
+}
+
+.job__icon__box i{
+    font-size: 25px;
+}
+
+.job__icon h4{
+    margin-left: 15px;
+}
+
+.job__box__pages{
+    /* margin: auto; */
+    margin-left: 118px;
+    width: 330px;
+    height: 350px;
+    border: 1px solid;
+    border-color: var(--bgColor);
+    background-color: #fbfbfb;
+}
+
+.job__box__title{
+    margin: 20px;
+}
+
+
+.job__box__location{
+    display: flex;
+    flex-wrap: wrap;
+    color: var(--bgColor);
+    font-weight: 200;
+    font-size: 12px;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+.job__box__location i{
+    margin-right: 5px;
+}
+
+.job__box__location p:nth-child(2){
+    margin-left: 10px;
+}
+
+.job__box__paragraph{
+    margin-top: 15px;
+    color: var(--bgColor);
+    line-height: 1.8;
+    margin-bottom: 25px;
+}
+
+.job__box__btn button{
+    padding: 8px 60px;
+    border: none;
+    background-color: var(--mainColor);
+    color: white;
+    cursor: pointer;
+}
+
+.status{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    width: 100%;
+    height: 250px;
+    background-color: var(--footerColor);
+}
+
+.status p, h5{
+    text-align: center;
+    color: #959595;
+    font-weight: 100;
+}
+
+.status__text{
+    top: 30%;
+    left: 20%;
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; */
+}
+
+.status h5{
+    color: white;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+.status__icon{
+    left: 50%;
+    bottom: 30px;
+    color: white;
+    font-size: 10px;
+}
+
+.start-line{
+    width: 100%;
+    height: 100px;
+    background-color: var(--mainColor);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.start-line__title{
+    color: white;
+    font-weight: 100;
+    font-size: 22px;
+    margin-right: 15px;
+}
+
+.start-line button{
+    padding: 8px 25px;
+    border: none;
+    background-color: white;
+    color: var(--mainColor);
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.posts{
+    width: 100%;
+    height: 800px;
+}
+
+.posts__title{
+    margin: 30px 0;
+}
+
+.posts__box{
+    display: flex;
+}
+
+.post__box{
+    width: 300px;
+    height: 550px;
+    border-bottom: 1px solid;
+    border-color: var(--bgColor);
+}
+
+.post__box:nth-child(2){
+    margin: 0 20px;
+}
+
+.post__title{
+    margin-top: 10px;
+}
+
+.post__data{
+    margin-top: 8px;
+    display: flex;
+}
+
+.post__data p{
+    margin-right: 8px;
+    font-weight: 100;
+    font-size: 12px;
+    color: var(--bgColor);
+}
+
+.post__paragraph{
+    margin-top: 20px;
+    font-size: 12px;
+    color: #363636;
+}
+
+.post__btn{
+    margin-top: 20px;
+    padding: 8px 20px;
+    border: none;
+    background-color: var(--mainColor);
+    color: white;
+}
+
 
 
