--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 .container{
     width: 80%;
     margin: auto;
-    height: 500px;
 }
 
 .nav{
@@ -40,6 +39,7 @@
 .nav__menu, .nav__login{
     list-style: none;
     display: flex;
+    /* position: relative; */
 }
 
 a{
@@ -51,6 +51,7 @@ a{
     margin: 0 15px;
     padding: 6px 12px;
     justify-content: start;
+    position: relative;
 }
 
 .nav__menu i{
@@ -83,6 +84,27 @@ a{
     color: white;
     transition: all .3s;
     cursor: pointer;
+}
+
+
+
+.dropdown__box{
+    display: none;
+    width: 100%;
+    background-color: #24d1418e;
+    position: absolute;
+    top: 35px;
+    left: 0;
+    z-index: 10;
+}
+
+.dropdown__box a:hover{
+    border-bottom: 1px solid;
+    color: black;
+}
+
+.nav__menu li:hover .dropdown__box{
+    display: block;
 }
 
 .nav__login li:hover a{
@@ -300,7 +322,7 @@ a{
 
 .jobs__table:hover{
     background-color: #36bf0023;
-    border-style: var(--mainColor);
+    border-color: var(--mainColor);
 }
 
 .job__table__btn{
@@ -473,10 +495,16 @@ a{
 }
 
 .post__box{
-    width: 300px;
+    width: 330px;
     height: 550px;
     border-bottom: 1px solid;
     border-color: var(--bgColor);
+}
+
+.post__box img{
+    width: 330px;
+    height: 250px;
+    object-fit: cover;
 }
 
 .post__box:nth-child(2){
@@ -512,6 +540,36 @@ a{
     background-color: var(--mainColor);
     color: white;
 }
+
+footer{
+    width: 100%;
+    min-height: 400px;
+    background-color: var(--footerColor);
+    color: white;
+    padding-top: 40px;
+}
+
+.footer__about{
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 1px solid;
+    border-color: #ffffff;
+}
+
+.about__box{
+    width: 400px;
+}
+
+.about__box p{
+    margin: 15px 0;
+    color: #aaaaaa;
+}
+
+.footer__column a, .footer__column li{
+    color: #aaaaaa;
+    margin: 7px 0;
+}
+
 
 
 
