--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ a{
 
 .posts{
     width: 100%;
-    height: 800px;
+    height: 700px;
 }
 
 .posts__title{
@@ -570,6 +570,39 @@ footer{
     margin: 7px 0;
 }
 
+.footer__links{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footer__links h4{
+    font-weight: 300;
+    margin-bottom: 20px;
+}
+
+.footer__links__icons i{
+    padding: 10px;
+    border-radius: 50%;
+    border: 1px solid;
+    border-color: #757575;
+    margin: 0 4px;
+}
+
+.footer__links p{
+    margin-top: 40px;
+    font-size: 12px;
+    font-weight: 200;
+    color: var(--bgColor);
+}
+
+.footer__links p span{
+    color: white;
+}
 
 
 
